--- a/commerce/auctions/templates/auctions/product.html
+++ b/commerce/auctions/templates/auctions/product.html
@@ -33,8 +33,10 @@
             <input name="bid" type="submit" value="Bid">
         </form>
         Highest Bid: {{ highest_bid }}€
+        {{ message }}
 
     {% endif %}
+
         
     <a href="{% url 'auctions:index' %}">Back to auctions</a>
 {% endblock %}
