--- a/commerce/auctions/templates/auctions/create.html
+++ b/commerce/auctions/templates/auctions/create.html
@@ -3,22 +3,25 @@
 {% block body %}
     <h2>Create Listing</h2>
 
-    <form action="{% url 'auctions:create' %}" method="post">
-        {% csrf_token %}
+    {% if user.is_authenticated %}
+        <form action="{% url 'auctions:create' %}" method="post">
+            {% csrf_token %}
         
-        <div class="form-group">
-            <input class="form-control" autofocus type="text" name="title" placeholder="Title">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="text" name="content" placeholder="Description">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="number" name="initial" placeholder="Entry Value">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="text" name="url" placeholder="Image URL">
-        </div>
-        <input class="btn btn-primary" type="submit" value="Create">
-    </form>
-    
+            <div class="form-group">
+                <input class="form-control" autofocus type="text" name="title" placeholder="Title">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="text" name="content" placeholder="Description">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="number" name="initial" placeholder="Entry Value">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="text" name="url" placeholder="Image URL">
+            </div>
+            <input class="btn btn-primary" type="submit" value="Create">
+        </form>
+    {% endif %}
+
+    <a href="{% url 'auctions:index' %}">Back to auctions</a>
 {% endblock %}
