--- a/commerce/auctions/templates/auctions/product.html
+++ b/commerce/auctions/templates/auctions/product.html
@@ -5,7 +5,7 @@
 
     <ul>
         <li> ID: {{product.id}}</li>
-        <li> Current Price: {{product.initial_bid}}€</li>
+        <li> Initial Price: {{product.initial_bid}}€</li>
         <li> Description: {{product.description}}</li>
         <li> {{product.url}}</li>
     </ul>
