--- a/commerce/auctions/templates/auctions/create.html
+++ b/commerce/auctions/templates/auctions/create.html
@@ -17,7 +17,14 @@
                 <input class="form-control" type="number" name="initial" placeholder="Entry Value">
             </div>
             <div class="form-group">
-                <input class="form-control" type="text" name="url" placeholder="Image URL">
+                <input class="form-control" type="text" name="url" placeholder="Image URL (Maximum 700x700 Recommended)">
+            </div>
+            <div class="form-group">
+                <select name="category">
+                    {% for category in categories %}
+                        <option value="{{ category.categories}}"> </option>
+                    {% endfor %}
+                </select>
             </div>
             <input class="btn btn-primary" type="submit" value="Create">
         </form>
