--- a/commerce/auctions/templates/auctions/product.html
+++ b/commerce/auctions/templates/auctions/product.html
@@ -2,7 +2,8 @@
 
 {% block body %}
     <h2>{{product.title}}</h2>
-
+    
+    <img src={{product.url}} alt="no image found">
     <ul>
         <li> ID: {{product.id}}</li>
         <li> Initial Price: {{product.initial_bid}}€</li>
@@ -42,7 +43,7 @@
                 </form>
             {% endif %}
         {% else %}
-            <p>Auction Closed! Winner: {{ transaction.username }} Price: {{ transaction.highest_bid }}€ </p>
+            <p>Auction Closed! Winner: {{ transaction.username }} </p>
         {% endif %}
         
         <h4>    Comment Section  </h4>
@@ -55,7 +56,7 @@
         <form action="{% url 'auctions:product' product.id %}" method="post">
         {% csrf_token %}
             <input name="comment"type="textarea" >
-            <input name="submit"type="submit" value="Submit">
+            <input name="submit"type="submit" value="Comment">
         </form>
     {% endif %}
 
