--- a/commerce/auctions/templates/auctions/create.html
+++ b/commerce/auctions/templates/auctions/create.html
@@ -22,7 +22,7 @@
             <div class="form-group">
                 <select name="category">
                     {% for category in categories %}
-                        <option value="{{ category.categories}}"> </option>
+                        <option value="{{ category.category}}"> {{category.category}} </option>
                     {% endfor %}
                 </select>
             </div>
